output_error_runtime.txt
Starting project at C:\Users\Usuario\.gemini\antigravity\scratch\nenipay
SyntaxError: Invalid regular expression: missing /
C:\Users\Usuario\.gemini\antigravity\scratch\nenipay\node_modules\typescript\lib\typescript.js:86699
        +/ falls through
         ^

SyntaxError: Invalid regular expression: missing /
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at importTypeScriptFromProjectOptionally (C:\Users\Usuario\.gemini\antigravity\scratch\nenipay\node_modules\@expo\cli\src\utils\tsconfig\evaluateTsConfig.ts:59:10)
